# botcachino_monorepo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  commands.py  docker-compose-prod.yaml  docker-compose.yaml  langgraph.json  main.py  pyproject.toml
data/: announcements.json  informations.json  news.json  scholarship.json
docs/: agent.md  api.md  architecture.md  frontend.md  product_backlog.md  setup.md
scripts/: seed_data.py
src/: config.py
src/agent/: __init__.py  agent.py  config.py  constants.py  exceptions.py  graph.py  langgraph_app.py  model_factory.py  services.py  state.py  streaming.py  tools.py
src/agent/nodes/: evaluation.py  fetch_ids.py  off_topic.py  respond.py  retry.py  router.py  search.py
src/api/: dependencies.py  schemas.py  server.py
src/api/routes/: __init__.py  agent_router.py  content_router.py  history_router.py  info_router.py  news_router.py  schemas.py
src/api/services/: content_service.py  embedding_service.py  history_service.py  info_service.py  news_service.py
src/db/: database.py
src/db/models/: content.py  history.py  info.py  news.py
tests/agent/: test_agent.py  test_agent_e2e.py
tests/api/services/: test_content_service.py  test_info_service.py  test_news_service.py
web/: README.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.css  App.jsx  App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/chat/: ChatPage.css  ChatPage.jsx  ChatPage.tsx  HistorySidebar.css  HistorySidebar.jsx  MessageBubble.css  MessageBubble.jsx  MessageBubble.tsx  MessageInput.css  MessageInput.jsx  MessageInput.tsx  TypingIndicator.css  TypingIndicator.jsx
web/src/components/molecules/: index.ts
web/src/components/news/: NewsCard.css  NewsCard.jsx  NewsCard.tsx  NewsCarousel.css  NewsCarousel.jsx  NewsCarousel.tsx  NewsSidebar.css  NewsSidebar.jsx  NewsSidebar.tsx
web/src/components/organisms/: MessageBubbleOrganism.tsx  index.ts
web/src/hooks/: useChat.js  useChat.ts  useHistory.ts  useNews.js  useNews.ts
web/src/lib/: sse.ts
web/src/pages/: ChatPage.module.css  ChatPage.tsx
web/src/pages/LandingPage/: LandingPage.module.css  (+1 more)
web/src/styles/: global.css  mixins.css  tokens.css  variables.css
web/src/types/: api.types.ts  component.types.ts  hooks.types.ts  index.ts
(+33 files in other folders)
