[project]
name = "botcachino-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.49",
]

[tool.pytest.ini_options]
pythonpath = ["."]
