[project]
name = "botcachino-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.49",
    "pgvector>=0.4.2",
    "langchain>=1.2.15",
    "langchain-nebius>=0.1.3",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.7.0",
    "langgraph>=0.2.0",
    "sse-starlette>=1.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]


[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.5",
    "ruff>=0.15.10",
    "langgraph-cli[inmem]>=0.4.0",
]
