[project]
name = "botcachino-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.49",
    "pgvector>=0.4.2",
    "langchain>=1.2.15",
    "langchain-nebius>=0.1.3",
    "langchain-cerebras>=0.1.0",
    "langchain-groq>=0.2.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.7.0",
    "langgraph>=0.2.0",
    "sse-starlette>=1.8.0",
    "langchain-huggingface>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "sentence-transformers>=4.1.0,<5.0",
    "transformers>=4.45.0,<5.0",
    "basedpyright>=1.39.0",
    "google-api-core>=2.30.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]


[tool.ruff]
line-length = 100

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.5",
    "ruff>=0.15.10",
    "langgraph-cli[inmem]>=0.4.0",
    "aiohttp>=3.13.5",
    "memray>=1.19.3",
]
